; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/frv/kernel/extr_dma.c_frv_dma_restart_circular.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/frv/kernel/extr_dma.c_frv_dma_restart_circular.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@frv_dma_channels = common dso_local global %struct.TYPE_2__* null, align 8
@SIX = common dso_local global i32 0, align 4
@CSTR = common dso_local global i32 0, align 4
@DMAC_CSTRx_CE = common dso_local global i64 0, align 8
@CCTR = common dso_local global i32 0, align 4
@DMAC_CCTRx_ACT = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @frv_dma_restart_circular(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i64 %1, i64* %4, align 8
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** @frv_dma_channels, align 8
  %7 = load i32, i32* %3, align 4
  %8 = sext i32 %7 to i64
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i64 %8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  store i64 %11, i64* %5, align 8
  %12 = load i64, i64* %5, align 8
  %13 = load i32, i32* @SIX, align 4
  %14 = load i64, i64* %4, align 8
  %15 = call i32 @___set_DMAC(i64 %12, i32 %13, i64 %14)
  %16 = load i64, i64* %5, align 8
  %17 = load i32, i32* @CSTR, align 4
  %18 = load i64, i64* %5, align 8
  %19 = load i32, i32* @CSTR, align 4
  %20 = call i64 @__get_DMAC(i64 %18, i32 %19)
  %21 = load i64, i64* @DMAC_CSTRx_CE, align 8
  %22 = xor i64 %21, -1
  %23 = and i64 %20, %22
  %24 = call i32 @___set_DMAC(i64 %16, i32 %17, i64 %23)
  %25 = call i32 (...) @mb()
  %26 = load i64, i64* %5, align 8
  %27 = load i32, i32* @CCTR, align 4
  %28 = load i64, i64* %5, align 8
  %29 = load i32, i32* @CCTR, align 4
  %30 = call i64 @__get_DMAC(i64 %28, i32 %29)
  %31 = load i64, i64* @DMAC_CCTRx_ACT, align 8
  %32 = or i64 %30, %31
  %33 = call i32 @__set_DMAC(i64 %26, i32 %27, i64 %32)
  %34 = load i32, i32* %3, align 4
  %35 = call i32 @frv_set_dma_inprogress(i32 %34)
  ret void
}

declare dso_local i32 @___set_DMAC(i64, i32, i64) #1

declare dso_local i64 @__get_DMAC(i64, i32) #1

declare dso_local i32 @mb(...) #1

declare dso_local i32 @__set_DMAC(i64, i32, i64) #1

declare dso_local i32 @frv_set_dma_inprogress(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
